--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Almeida Rebuild</title>
 
     <!-- Ícones Bootstrap -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
 
     <style>
         /* ------------------ RESET / GERAL ------------------ */
@@ -27,28 +27,6 @@
             text-align: center;
         }
 
-        /* ------------------ HERO ------------------ */
-        .hero {
-            position: relative;
-            height: 90vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            background: url('bj.jpeg') center/cover no-repeat;
-        }
-
-        .hero-overlay {
-            position: absolute;
-            inset: 0;
-            background: rgba(0,0,0,0.6);
-        }
-
-        .hero-content {
-            position: relative;
-            z-index: 2;
-        }
-
         .btn {
             background-color: #d4af37;
             padding: 12px 25px;
@@ -56,6 +34,39 @@
             color: black;
             font-weight: bold;
             border-radius: 5px;
+        }
+
+        /* ------------------ HERO COM VÍDEO ------------------ */
+        .hero {
+            position: relative;
+            height: 90vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            overflow: hidden;
+        }
+
+        .bg-video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: 1;
+        }
+
+        .hero-overlay {
+            position: absolute;
+            inset: 0;
+            background: rgba(0,0,0,0.6);
+            z-index: 2;
+        }
+
+        .hero-content {
+            position: relative;
+            z-index: 3;
         }
 
         /* ------------------ SERVIÇOS ------------------ */
@@ -118,7 +129,12 @@
 
     <!-- ================== HERO ================== -->
     <div class="hero">
+        <video class="bg-video" autoplay muted loop playsinline>
+            <source src="video.mp4" type="video/mp4">
+        </video>
+
         <div class="hero-overlay"></div>
+
         <div class="hero-content">
             <h1>Almeida Rebuild</h1>
             <p>Transformando ambientes com qualidade, elegância e compromisso.</p>
